flex/flex-tests/testData/flex_highlighting/SuggestCorrectMxNamespace.mxml
<?xml version="1.0"?>
<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
    <<error descr="Element mx:Button is not allowed here"><error descr="Namespace 'mx' is not bound">mx</error>:Button<caret></error>/>
</s:Application>
